# simple-token-pool

./: .gitignore  .yarnrc.yml  COMMANDS.md  README.md  package.json  tsconfig.json
cli/: Cargo.toml
cli/src/: main.rs
program/: Cargo.toml
program/src/: entrypoint.rs  instruction.rs  lib.rs  processor.rs  state.rs
program/tests/: initialize.rs  swap.rs
program/tests/helpers/: mod.rs
web/: package.json  tsconfig.json
web/src/: App.tsx  config.ts
web/src/helpers/: baseLayout.ts  instruction.ts  layout.ts  pool.ts
web/src/views/: createPool.tsx  swap.tsx
